# uce-edge

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  main.py  plan.md  pyproject.toml
scripts/: _brain.py  _core.py  brain_baseline.py  brain_compare.py  brain_onnx_export.py  brain_reference_pipeline.py  brain_web_bench.py  brain_web_bench2.py  brain_web_phase2.py  brain_web_phase3.py  brain_web_phase4.py  brain_web_phase5.py  brain_web_phase6.py  compare.py  core_baseline.py  core_onnx_export.py  core_onnx_quantize.py  extract_human_protein_embeddings.py
web/: bench.html  human_gene_dict.json  index.html  package-lock.json  package.json  phase2.html  phase3.html  phase4.html  phase5.html  phase6.html  tsconfig.json
web/src/: bench.ts  phase2.ts  phase3.ts  phase4.ts  phase5.ts  phase6.ts
web/src/lib/: cache.ts  fixtures.ts  gather.ts  metrics.ts  normalize.ts  onnx.ts  rng.ts  sampler.ts  sentence.ts
