[project]
name = "uce-edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.24.0",
    "ipython>=9.12.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "requests==2.25.1",
    "scanpy==1.10.2",
    "scipy==1.14.1",
    "torch>=2.11.0",
    "tqdm==4.66.5",
    "urllib3==1.26.6",
]
