[project]
name = "uce-edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.24.0",
    "huggingface-hub>=1.10.1",
    "ipython>=9.12.0",
    "numpy>=2.1.0",
    "onnx>=1.19.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.0",
    "pandas>=2.2.2",
    "playwright>=1.58.0",
    "requests>=2.25.1",
    "scanpy>=1.10.2",
    "scipy>=1.14.1",
    "torch>=2.11.0",
    "tqdm>=4.66.5",
    "transformers>=5.5.3",
    "urllib3>=1.26.6",
]
